@startuml
'https://plantuml.com/class-diagram

class HpPropProduct{
    + HpPropProduct(int locationX,int locationY,int speedX,int speedY)
    + creatHpProp(int locationX, int locationY, int speedX, int speedY):HpProp
}

class FirePropProduct{
    + FirePropProduct(int locationX,int locationY,int speedX,int speedY)
    + creatFireProp(int locationX, int locationY, int speedX, int speedY):FireProp
}

class BoomPropProduct{
    + BoomPropProduct(int locationX,int locationY,int speedX,int speedY)
    + creatBoomProp(int locationX, int locationY, int speedX, int speedY):BoomProp
}

class AbstractPropFactory{
    + creatPropProduct():AbstractPropProduct
}

class AbstractPropProduct{
    + creatHpProp():HpProp
    + creatFireProp():FireProp
    + creatBoomProp():BoomProp
}

class CreatHpProp{
    + creatPropProduct():AbstractPropProduct
}

class CreatFireProp{
    + creatPropProduct():AbstractPropProduct
}

class CreatBoomProp{
    + creatPropProduct():AbstractPropProduct
}

AbstractPropFactory <|-- CreatHpProp
AbstractPropFactory <|-- CreatFireProp
AbstractPropFactory <|-- CreatBoomProp

AbstractPropProduct <|-- HpPropProduct
AbstractPropProduct <|-- FirePropProduct
AbstractPropProduct <|-- BoomPropProduct

CreatHpProp <.. HpPropProduct
CreatFireProp <.. FirePropProduct
CreatBoomProp <.. BoomPropProduct

@enduml